--- a/frontend/static/assets/css/main.css
+++ b/frontend/static/assets/css/main.css
@@ -984,7 +984,7 @@ input, select, textarea {
 			font-size: 0.9em;
 			font-weight: 600;
 			padding: 0 0.75em 0.75em 0.75em;
-			text-align: left;
+			text-align: center;
 		}
 
 		table thead {
