Searh Table Created but need username

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -261,22 +261,16 @@
 								  </button>
 								</div>
 								<div class="modal-body">
-								  <input id="searchUserText" type="text" class="form-control mb-2" placeholder="Arama...">
-								  <button id="searchUser" type="button" class="btn btn-primary mb-2">Ara</button>
-								  <table class="table">
-									<thead>
-									  <tr>
-										<th>Column 1</th>
-										<th>Column 2</th>
-									  </tr>
-									</thead>
-									<tbody>
-									  <tr>
-										<td>Data 1</td>
-										<td>Data 2</td>
-									  </tr>
-									</tbody>
+									<div class="container">
+										<div class="row">
+											<div class="col-9"><input id="searchUserText" style="color:black" type="text" class="form-control mb-2" placeholder="Search"></div>
+								  			<div class="col-3"><button id="searchUser" type="button" class="btn btn-primary mb-2">Search</button></div>
+										</div>
+									</div>
+								  
+								  <table class="table" id="searchUserTable">
 								  </table>
+								  
 								</div>
 							  </div>
 							</div>
